examples/assignment2/type-error/15.j
/* Test the following:
 *  - type error: use an undeclared method in a class
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;
        Bool bool;
        println(null);
        bool = sur.donthavethismethod(null);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(v);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }

    Void replace(Surface another, String s, Int i) {
        String a;
        a = null;
    }
}
